--- a/PandM/Backend/.env
+++ b/PandM/Backend/.env
@@ -1,3 +1,4 @@
 CLIENT_SECRET="your spotify secret key"
 CLIENT_ID="your spotify client id"
 API_KEY="your youtube api key"
+MONGO_URI="your mongo uri"
