--- a/PandM/Backend/.env
+++ b/PandM/Backend/.env
@@ -2,3 +2,4 @@ CLIENT_SECRET="your spotify secret key"
 CLIENT_ID="your spotify client id"
 API_KEY="your youtube api key"
 MONGO_URI="your mongo uri"
+MONGO_DBNAME="your dbname"
